--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,18 @@
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		</dependency>
+		
+		<dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-validator</artifactId>
+	        <version>5.1.2.Final</version>
+   		</dependency>
+   		
+   		 <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+            </dependency>
+
 								
 	</dependencies>
 	<build>
