--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,11 @@
 		<version>2.1.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
+	
+	<!--打包jar包  clean package  -Dmaven.test.skip=true   -->
+	
 	<!-- dakjhaifha -->
+	<packaging>war</packaging>
 	<groupId>com.yc</groupId>
 	<artifactId>spring-story</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
