--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
   resources:
     staticLocations:
       - classpath:/static/
-      - file:/e:/story/
+      - file:/E:/story/
     
   mail:
     #邮箱服务器地址
